--- a/flaskr/templates/add_item.html
+++ b/flaskr/templates/add_item.html
@@ -13,7 +13,7 @@
     <div class="row pt-5">
         <div class="col"></div>
         <div class="col-4 d-flex justify-content-between">
-            <a href="#" class="btn btn-primary">From Existing</a>
+            <a href={{url_for('item.assign')}} class="btn btn-primary">From Existing</a>
             <a href={{url_for('item.create')}} class="btn btn-primary">Create New</a>
         </div>
         <div class="col"></div>
