--- a/flaskr/templates/profile.html
+++ b/flaskr/templates/profile.html
@@ -143,9 +143,11 @@
                                         <i class="bi bi-trash"></i>
                                         Delete Item
                                     </button>
-                                    <button class="btn btn-primary mx-2">
+                                    <a class="btn btn-primary mx-2"
+                                        href={{url_for('item.edit', product_id=item['product_id'])}}>
+                                        <i class="bi bi-pencil"></i>
                                         Edit Item
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
