--- a/flaskr/templates/profile.html
+++ b/flaskr/templates/profile.html
@@ -41,48 +41,43 @@
         {% else %}
         <div class="card-header">User</div>
         {% endif %}
-        <div class="card-body">
-            <h2 class="card-title text-center">{{ user.fullName }}</h1>
-                <h4 class="card-subtitle mb-5 text-muted text-center">{{ user.emailAddress }}</h3>
-                    {% if user.userType == "USR" %}
-                    <div class="accordion" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Addresses
-                                </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <div class="list-group">
-                                        {% for address in user.addressNames %}
-                                        <div class="list-group-item">
-                                            <div class="d-flex flex-row align-items-center">
-                                                <div class="flex-fill">
-                                                    {{address.addressName}}
-                                                </div>
-                                                <div class="flex-fill d-flex flex-row-reverse">
-                                                    <button class="btn btn-danger mx-2"
-                                                        onclick="delete_address({{address.address_id}})">
-                                                        <i class="bi bi-trash"></i>
-                                                        Delete Address
-                                                    </button>
-                                                    <button class="btn btn-primary mx-2">
-                                                        Edit Address
-                                                    </button>
-                                                </div>
-                                            </div>
+        <div class = "card-body">
+            <h2 class = "card-title text-center">{{ user.fullName }}</h1>
+            <h4 class = "card-subtitle mb-5 text-muted text-center">{{ user.emailAddress }}</h3> 
+            {% if user.userType == "USR" %}
+            <div class="accordion" id = "accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Addresses
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class = "list-group">
+                                {% for address in user.addressNames %}                                
+                                <div class = "list-group-item">
+                                    <div class = "d-flex flex-row align-items-center">
+                                        <div class = "flex-fill">
+                                            {{address.addressName}}
                                         </div>
-                                        {% endfor %}
-                                    </div>
-                                    <div class="text-center mt-3">
-                                        <button class="btn btn-primary">
-                                            Add Address
-                                        </button>
+                                        <div class = "flex-fill d-flex flex-row-reverse">                                            
+                                            <button class = "btn btn-danger mx-2" onclick="delete_address({{address.address_id}})">
+                                                <i class="bi bi-trash"></i>
+                                                Delete Address
+                                            </button>
+                                            <a class = "btn btn-primary mx-2" href="{{ url_for('user.editAddress', address_id = address.address_id)}}">
+                                                Edit Address
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
+                                {% endfor %}
+                            </div>
+                            <div class = "text-center mt-3">
+                                <a class = "btn btn-primary" href="{{ url_for('user.addAddress')}}">
+                                    Add Address
+                                </a>
                             </div>
                         </div>
                         <div class="accordion-item">
