Show cart and wishlist only to customer

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -30,8 +30,10 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="{{url_for('user.profile')}}">Profile</a></li>
                     <li><a class="dropdown-item" href={{url_for('auth.logout')}}>Logout</a></li>
+                    {% if session.get('userType') == "USR" %}
                     <li><a class="dropdown-item" href={{url_for('user.cart')}}>Cart</a></li>
                     <li><a class="dropdown-item" href={{url_for('user.wishlist')}}>Wishlist</a></li>
+                    {% endif %}
                 </ul>
             </div>
             {% endif %}
