--- a/flaskr/templates/assign_item_data.html
+++ b/flaskr/templates/assign_item_data.html
@@ -31,9 +31,9 @@
             <div class="col-6">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" value={{product['productName']}} readonly>
+                    <input type="text" class="form-control" id="name" value="{{product['productName']}}" readonly>
                 </div>
-                <div class="mb-3">
+                <div class=" mb-3">
                     <label for="desc" class="form-label">Description</label>
                     <textarea class="form-control" id="desc" rows="5"
                         readonly>{{product['productDescription']}}</textarea>
