--- a/flaskr/templates/edit_item.html
+++ b/flaskr/templates/edit_item.html
@@ -31,7 +31,7 @@
             <div class="col-6">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" name="name" value={{product['productName']}}
+                    <input type="text" class="form-control" id="name" name="name" value="{{product['productName']}}"
                         readonly>
                 </div>
                 <div class="mb-3">
