--- a/flaskr/templates/editAddress.html
+++ b/flaskr/templates/editAddress.html
@@ -30,7 +30,7 @@
             <div class="col-6">
                 <div class="mb-3">
                     <label for="address" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="address" name="address" value={{ address.addressName }}>
+                    <input type="text" class="form-control" id="address" name="address" value="{{address["addressName"]}}">
                 </div>
             </div>
             <div class="col"></div>
