--- a/flaskr/templates/orderSummary.html
+++ b/flaskr/templates/orderSummary.html
@@ -7,9 +7,9 @@
         <p class = "fw-bolder fs-5 mb-0"> {{user.fullName}}</p>
         <p class = "fw-bolder fs-6 text-muted mt-0"> {{user.emailAddress}}</p>
 
-        <p class = "fs-6"> {{order.address}}</p>
-
-        <table class="table table-striped">
+        <p class = "fs-6"> {{
+        <table class="table table-strorder.address}}</p>
+iped">
             <thead>
                 <tr>
                     <th scope="col">Item Name</th>
