--- a/flaskr/templates/browse.html
+++ b/flaskr/templates/browse.html
@@ -4,34 +4,41 @@
 {% block main %}
 <script>
     $(document).ready(function () {
-        $('.search-box').on('click', '.search-btn', function (e) {
+        $('.card-body').on('click', '.add-cart-btn', function (e) {
             e.preventDefault();
-            searchStr = $('.search-bar').val()
-            $.ajax(
+            prodId = e.target.name.split(',')[0]
+            sellerId = e.target.name.split(',')[1]
+            console.log(prodId)
+            console.log(sellerId)
+            $.post("/user/browse",
             {
-                type: "GET",
-                url: "{{url_for('search')}}",
-                data: { "query": search_term },
-                success: function (response) {
-                        $("#result").empty(); //remove whatever is there and append whatever is returned
-                        $("#result").append(response.result) //append whatever you want to append
-                }
-            }
-        )
+                type: 'IC',
+                prodId: prodId,
+                sellerId: sellerId
+            }, function(){})
         });
 
+        $('.card-body').on('click', '.add-wishlist-btn', function (e) {
+            e.preventDefault();
+            prodId = e.target.name
+            $.post("/user/browse",
+            {
+                type: 'IW',
+                prodId: prodId,
+            }, function(){})
+        });
     });
 </script>
-<div class="container-fluid pt-4 mx-auto">
+<div class="browse-container container-fluid pt-4 mx-auto">
         <div class="search-box input-group w-50 mx-auto">
-            <input type="text" class="search-bar form-control" placeholder="Search"/>
-            <a href="#" class="search-btn btn btn-primary">
-                <i class="bi bi-search"></i>
-            </a>
+            <form class="input-group w-50 mx-auto" method="get" action="{{url_for('user.browse')}}"> 
+            <input type="text" name="searchStr" class="form-control" placeholder="Search" value="{{searchStr}}" />
+            <button type="submit" class="search-btn btn btn-primary"><i class="bi bi-search"></i></a>
+            </form>
         </div>
     <div class="container">
         <ul style="list-style-type: none;">
-            <li class="pt-4">
+            <!-- <li class="pt-4">
                 <div class="card">
                     <div class="card-header">
                        Product
@@ -40,11 +47,11 @@
                         <h5 class="card-title"><s>product price</s>discount_price</h5>
                         <p class="card-text">product description loren ipsum</p>
                         <p class="card-text"><small class="text-muted">Sold By : Amazon</small></p>
-                        <a href="#" class="btn btn-primary">Add to Cart</a>
-                        <a href="#" class="btn btn-primary">Add to Wishlist</a>
+                        <a href="#" name="productId,sellerId" class="add-cart-btn btn btn-primary">Add to Cart</a>
+                        <a href="#" name="productId" class="add-wishlist-btn btn btn-primary">Add to Wishlist</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
             {% for product in products %}
             <li class="pt-4">
                 <div class="card">
@@ -52,11 +59,11 @@
                         {{product['productName']}}
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title"><s>{{prices[product['productId']]}}</s> {{discounted_prices[product['productId']]}}</h5>
+                        <h5 class="card-title"><s>₹ {{prices[product['productId']]}}</s>   ₹ {{discounted_prices[product['productId']]}}</h5>
                         <p class="card-text">{{product['productDescription']}}</p>
-                        <p class="card-text"><small class="text-muted">Sold By : {{ sellers[product['productId']] }} </small></p>
-                        <a href="#" class="btn btn-primary">Add to Cart</a>
-                        <a href="#" class="btn btn-primary">Add to Wishlist</a>
+                        <p class="card-text"><small class="text-muted">Sold By : {{ product['sellerName'] }} </small></p>
+                        <a href="#" name="{{product['productId']}},{{product['sellerId']}}" class="add-cart-btn btn btn-primary">Add to Cart</a>
+                        <a href="#" name="{{product['productId']}}" class="add-wishlist-btn btn btn-primary">Add to Wishlist</a>
                     </div>
                 </div>
             </li>
