--- a/flaskr/templates/cart.html
+++ b/flaskr/templates/cart.html
@@ -5,25 +5,24 @@
 <script>
     $(document).ready(function () {
         function incrementValue(e) {
+            e.e1.preventDefault();
+
             prodId = e.prodId;
-            sellerId = e.prodId;
+            sellerId = e.sellerId;
             e = e.e1;
-            console.log(prodId)
-            e.preventDefault();
             var fieldName = $(e.target).data('field');
             var parent = $(e.target).closest('div');
-            var currentVal = parseInt(parent.find('input[name=' + fieldName + ']').val(), 10);
+            var currentVal = parseInt(parent.find(`input[name=${fieldName}]`).val(), 10);
 
             if (!isNaN(currentVal)) {
                 parent.find('input[name=' + fieldName + ']').val(currentVal + 1);
-                $.post("/user/cart", 
-                {
-                    type:"Q",
-                    prodId:prodId,
-                    sellerId:sellerId,
-                    newQ:currentVal+1
-                },
-                function(){});
+                $.post("/user/cart", {
+                        type: "Q",
+                        prodId: prodId,
+                        sellerId: sellerId,
+                        newQ: currentVal + 1
+                    },
+                    function () {});
 
             } else {
                 parent.find('input[name=' + fieldName + ']').val(0);
@@ -31,49 +30,55 @@
         }
 
         function decrementValue(e) {
+            e.e1.preventDefault();
+
             prodId = e.prodId;
-            sellerId = e.prodId;
+            sellerId = e.sellerId;
             e = e.e1;
-            console.log(prodId)
-            e.preventDefault();
             var fieldName = $(e.target).data('field');
             var parent = $(e.target).closest('div');
-            var currentVal = parseInt(parent.find('input[name=' + fieldName + ']').val(), 10);
+            var currentVal = parseInt(parent.find(`input[name=${fieldName}]`).val(), 10);
 
             if (!isNaN(currentVal) && currentVal > 1) {
                 parent.find('input[name=' + fieldName + ']').val(currentVal - 1);
-                $.post("/user/cart", 
-                {
-                    type:"Q",
-                    prodId:prodId,
-                    sellerId:sellerId,
-                    newQ:currentVal-1
-                },
-                function(){});
+                $.post("/user/cart", {
+                        type: "Q",
+                        prodId: prodId,
+                        sellerId: sellerId,
+                        newQ: currentVal - 1
+                    },
+                    function () {});
             } else {
                 parent.find('input[name=' + fieldName + ']').val(1);
             }
         }
 
         $('.input-group').on('click', '.button-plus', function (e) {
-            incrementValue({e1:e, prodId:e.target.name});
-        }); 
+            incrementValue({
+                e1: e,
+                prodId: e.target.name.split(',')[0],
+                sellerId: e.target.name.split(',')[1]
+            });
+        });
 
         $('.input-group').on('click', '.button-minus', function (e) {
-            decrementValue({e1:e, prodId:e.target.name});
+            decrementValue({
+                e1: e,
+                prodId: e.target.name.split(',')[0],
+                sellerId: e.target.name.split(',')[1]
+            });
         });
 
         $('.card-body').on('click', '.remove-cart-btn', function (e) {
             prodId = e.target.name
             sellerId = e.target.name
-            $.post("/user/cart", 
-            {
-                type:"R",
-                prodId:prodId,
-                sellerId:sellerId,
-                newQ:-1
-            },
-            function(){});
+            $.post("/user/cart", {
+                    type: "R",
+                    prodId: prodId,
+                    sellerId: sellerId,
+                    newQ: -1
+                },
+                function () {});
         });
 
     });
@@ -125,18 +130,22 @@
                         {{product['productName']}}
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title"><s>₹ {{prices[product['productId']]}}</s>   ₹ {{discounted_prices[product['productId']]}}</h5>
+                        <h5 class="card-title"><s>₹ {{prices[product['productId']]}}</s> ₹
+                            {{discounted_prices[product['productId']]}}</h5>
                         <p class="card-text">{{product['productDescription']}}</p>
-                        <p class="card-text"><small class="text-muted">Sold By : {{ product['sellerName'] }} </small></p>
+                        <p class="card-text"><small class="text-muted">Sold By : {{ product['fullName'] }} </small></p>
                         <div class="input-group">
-                            <input type="button" name="{{product['productId']}},{{product['sellerId']}}" value="-" class="button-minus border rounded-circle  icon-shape mx-1 "
-                                data-field="quantity" style="width: 2rem; height: 2rem;">
-                            <input type="number" name="product_quantity" min="1" value="{{product['quantity']}}" name="quantity"
+                            <input type="button" name="{{product['productId']}},{{product['sellerId']}}" value="-"
+                                class="button-minus border rounded-circle  icon-shape mx-1 " data-field="quantity"
+                                style="width: 2rem; height: 2rem;">
+                            <input type="number" min="1" value="{{product['quantity']}}" name="quantity"
                                 class="quantity-field border-1 text-center mx-1" style="width: 4rem; height: 2rem;">
-                            <input type="button" name="{{product['productId']}},{{product['sellerId']}}" value="+" class="button-plus border rounded-circle icon-shape ml-1 "
-                                data-field="quantity" style="width: 2rem; height: 2rem;">
+                            <input type="button" name="{{product['productId']}},{{product['sellerId']}}" value="+"
+                                class="button-plus border rounded-circle icon-shape ml-1 " data-field="quantity"
+                                style="width: 2rem; height: 2rem;">
                         </div>
-                        <button class="remove-cart-btn btn-primary mt-1" name="{{product['productId']}},{{product['sellerId']}}">Remove from Cart</button>
+                        <button class="remove-cart-btn btn-primary mt-1"
+                            name="{{product['productId']}},{{product['sellerId']}}">Remove from Cart</button>
                     </div>
                 </div>
             </li>
