--- a/flaskr/templates/wishlist.html
+++ b/flaskr/templates/wishlist.html
@@ -7,14 +7,14 @@
 
     });
 </script>
-<div class="wishlist container-fluid" >
+<div class="wishlist container-fluid">
     <div class="wishlist_header container">
         <p class="display-3 pt-4 text-center">Your Wishlist</h3>
     </div>
     <div id="sellers"></div>
     <div class="wishlist_cont container">
         <ul style="list-style-type: none;">
-            <li class="pt-4">
+            {# <li class="pt-4">
                 <div class="card">
                     <div class="card-header">
                        product name
@@ -26,27 +26,30 @@
                         <button name="{{ product.prodId }}" class="rem-wishlist-btn btn btn-primary">Remove from Wishlist</button>
                       </div>
                 </div>
-            </li>
+            </li> #}
             {% for product in products %}
             <li class="pt-4">
                 <div class="card">
                     <div class="card-header">
-                       {{ product.name }}
-                      </div>
-                      <div class="card-body">
-                        <h5 class="card-title"><s>₹ {{prices[product['productId']]}}</s>   ₹ {{discounted_prices[product['productId']]}}</h5>
+                        {{ product.name }}
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"><s>₹ {{prices[product['productId']]}}</s> ₹
+                            {{discounted_prices[product['productId']]}}</h5>
                         <p class="card-text">{{ product["productDescription"] }}</p>
-                        
+
                         <form method="get" action="{{url_for('user.wishlist')}}">
-                            <input type="hidden" value="{{product['productId']}}" name="prodId"/>
-                            <button type="submit" name="{{product['productId']}}" class="add-cart-btn btn-primary">Add to Cart</button>
+                            <input type="hidden" value="{{product['productId']}}" name="prodId" />
+                            <button type="submit" name="{{product['productId']}}" class="add-cart-btn btn-primary">Add
+                                to Cart</button>
                         </form>
 
                         <form class="pt-2" method="get" action="{{url_for('user.wishlist')}}">
-                            <input type="hidden" value="{{product['productId']}}" name="prodId"/>
-                            <button type="submit" name="{{product['productId']}}" class="rem-wishlist-btn btn-danger btn-primary">Remove from Wishlist</button>
+                            <input type="hidden" value="{{product['productId']}}" name="prodId" />
+                            <button type="submit" name="{{product['productId']}}"
+                                class="rem-wishlist-btn btn-danger btn-primary">Remove from Wishlist</button>
                         </form>
-                      </div>
+                    </div>
                 </div>
             </li>
             {% endfor %}
