--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand text-light">aZaMon</a>
+                <a href='/' class="navbar-brand text-light">aZaMon</a>
                 {% block navbar_right %}{% endblock %}
             </div>
             {% with firstName = session.get('firstName') %}
