--- a/flaskr/templates/sellerlist.html
+++ b/flaskr/templates/sellerlist.html
@@ -5,18 +5,25 @@
 <div class="sellerlist container-fluid" >
     <div class="sellerlist_header container">
         <p class="display-3 pt-4 text-center">Pick A Seller</h3>
-        <p class="h4 pt-4 text-center">Product Name : {{productName}}</p>
-        <p class="h4 pt-4 text-center text-muted">Product ID : {{productID}}</p>
-        <p class="h4 pt-4 text-center">Product Description : {{productDescription}}</p>
+        <div class="border mx-auto mb-3" style="max-width:50%;"><p class="pt-4 text-center"><b>Product Name : {{productName}}</b><br>
+        <span class="text-center text-muted">Product ID : {{productID}}</span><br>
+        Product Description : {{productDescription}}</p></div>
     </div>
     
     <div class="seller_cont container">
         <form method="get" action="{{url_for('user.wishlisttocart')}}">
+            <ul class="list-group">
             {% for seller in sellers %}
-                <input type="radio" name="seller" value="{{seller['sellerId']}}"> Name: {{seller['sellerName']}}  Discounted Price: {{seller['discountedPrice']}}  Original Price: {{seller['price']}}
+            <li class="list-group-item">
+                <input class="form-check-input me-1" type="radio" name="seller" value="{{seller['sellerId']}}"><b>Name:</b> {{seller['name']}}    <b>Discounted Price:</b>  ₹ {{seller['discountedPrice']}}     <b>Original Price:</b>  ₹ {{seller['price']}} <br>
+            </li>
+
             {% endfor %}
+        </ul>
                 <input type="hidden" name="prod" value="{{productID}}" />
-                <button type="submit" class="btn-success btn-lg mx-auto">Add to Cart</button>
+                <div class="d-grid mx-auto">
+                <button type="submit" class="btn-success btn-lg mx-auto mt-4">Add to Cart</button>
+                </div>
         </form>
     </div>
 </div>
