Error handling in forms.

--- a/flaskr/templates/cart.html
+++ b/flaskr/templates/cart.html
@@ -126,7 +126,7 @@
                                 class="button-minus border rounded-circle  icon-shape mx-1 " data-field="quantity"
                                 style="width: 2rem; height: 2rem;">
                             <input type="number" min="1" value="{{product['quantity']}}" name="quantity"
-                                class="quantity-field border-1 text-center mx-1" style="width: 4rem; height: 2rem;">
+                                class="quantity-field border-1 text-center mx-1" style="width: 4rem; height: 2rem;" readonly>
                             <input type="button" name="{{product['productId']}},{{product['sellerId']}}" value="+"
                                 class="button-plus border rounded-circle icon-shape ml-1 " data-field="quantity"
                                 style="width: 2rem; height: 2rem;">
